--- a/application/views/scripts/report/index.phtml
+++ b/application/views/scripts/report/index.phtml
@@ -4,7 +4,7 @@
     <div id="view-content">
     <div class="noprint">
         <?php if(isset($this->out)): ?>
-        <a href="report/export">Экспорт в excel</a> | <a href="#" onClick="window.print();return false">Распечатать отчет</a><br>
+        <a href="/report/exportbyarea">Экспорт в excel</a> | <a href="#" onClick="window.print();return false">Распечатать отчет</a><br>
         <?php endif; ?>
     </div>
 
